Footer: further adjustments for centering issues on mobile

--- a/css-compiled/footer.css
+++ b/css-compiled/footer.css
@@ -98,6 +98,8 @@
     font-size: 90%; }
 
 @media only screen and (max-width: 400px) {
+  #footer .container {
+    margin: 0; }
   #footer .columns {
     width: 100%; }
   #footer #footer-nav {
@@ -120,6 +122,7 @@
   #footer .um-logo {
     width: 100%;
     float: none;
+    text-align: center;
     margin: 0 auto 10px; }
     #footer .um-logo img {
       width: 95%;
