--- a/css-compiled/style-all.css
+++ b/css-compiled/style-all.css
@@ -493,6 +493,8 @@ h2.page-title span {
     font-size: 90%; }
 
 @media only screen and (max-width: 400px) {
+  #footer .container {
+    margin: 0; }
   #footer .columns {
     width: 100%; }
   #footer #footer-nav {
@@ -515,6 +517,7 @@ h2.page-title span {
   #footer .um-logo {
     width: 100%;
     float: none;
+    text-align: center;
     margin: 0 auto 10px; }
     #footer .um-logo img {
       width: 95%;
