--- a/sass/sass-partials/components/_footer.scss
+++ b/sass/sass-partials/components/_footer.scss
@@ -86,6 +86,9 @@
 
 @media only screen and (max-width: 400px) { 
     #footer {
+        .container {
+            margin: 0;
+        }
         .columns {
             width: 100%;
         }
@@ -114,6 +117,7 @@
         .um-logo {
             width: 100%;
             float: none;
+            text-align: center;
             margin: 0 auto 10px;
             img {
                 width: 95%;
